# Spider-Rose

./: .gitignore  PROJECT.md  README.md  idea.md  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml
.storybook/: main.js  preview.js
.wolf/: buglog-index.md  buglog.jsonl
.wolf/codex-session/: README.md  current-session.md
.wolf/codex-session/code-review-process/: README.md
.wolf/scripts/: generate-bug-index.mjs
developer-docs/: Agents.md  Architecture.md  Atomic-Plan.md  Description.md  Features.md  Future-Features.md  Plan.md  README.md  Stacks-and-Tools.md  Team.md  Terminal-UX-Plan.md  UI-Plan-Layer.md
docs/developer-docs/: Agents.md  Architecture.md  Description.md  Features.md  Future-Features.md  Product-Principles.md  README.md  Stacks-and-Tools.md  Terminal-UX-Plan.md  UI-Plan-Layer.md
docs/developer-docs/education/: Fundamental-Blocks-Primer.md  Google-Careers-Workflow-Learning.md  README.md
docs/developer-docs/implementation/: Agents.md  Architecture.md  Stacks-and-Tools.md  Terminal-UX-Plan.md  UI-Plan-Layer.md
docs/engineering-standards/: GitHub-Workflow.md
docs/research-docs/: Antigravity-Agent-IDE-Competitor-Research.md  CrewAI-Design-Architecture-Workflow.md  Hermes-Design-Architecture-Workflow.md  OpenClaw-Agent-Design-Architecture-Workflow.md  README.md  n8n-Design-Architecture-Workflow.md
src/spider_rose/: __init__.py  agents.py  cli.py  google_careers.py  logs.py  project.py  runtime.py  server.py  workflow.py
stories/: components.js  spider-rose.css  spider-rose.stories.js
tests/: test_cli_flow.py
(+21 files in other folders)
