[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "spider-rose"
version = "0.1.0"
description = "Terminal-first agent creation and execution for developers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Joel" },
  { name = "Mukthar" }
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "fastapi>=0.111",
  "uvicorn>=0.30"
]

[project.optional-dependencies]
dev = [
  "httpx2>=0.1",
  "pytest>=8.0"
]

[project.scripts]
spiderrose = "spider_rose.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
